testdata/p4_16_errors/issue67.p4
/*
 * SPDX-FileCopyrightText: 2017 VMware, Inc.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

const bool x = 20; // error
